fix theme button overflow

--- a/personal-website/components/locale/header/theme-button.module.scss
+++ b/personal-website/components/locale/header/theme-button.module.scss
@@ -4,7 +4,7 @@ $width: 2.2em;
 $height: 2em;
 
 .textContainer {
-    @apply flex h-full w-16 items-center justify-center whitespace-nowrap;
+    @apply flex h-full w-20 items-center justify-center whitespace-nowrap;
     perspective: 100px;
 }
 .iconContainer {
@@ -20,6 +20,7 @@ $distToCenter: math.tan(30deg) * math.div(-$height, 2);
     transform-origin: center center $distToCenter;
     transform: rotateX(0deg);
     transition: transform 0.5s ease-in-out;
+    width: fit-content;
 }
 
 .pieces,
